--- a/PDF_OCR.ipynb
+++ b/PDF_OCR.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "# OCR on PDF\n",
         "\n",
-        "This notebook can OCR on large and unsearchable PDF files and has been developed in 08 Dec 2024."
+        "This notebook can OCR on large and unsearchable PDF files and has been developed on 08 Dec 2024."
       ],
       "metadata": {
         "id": "aigM18kE9rfL"
